// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountInfo component should render the component properly 1`] = `
<section
  className="account"
>
  <div
    className="account__name"
  >
    Hi, 
    mysterious user
  </div>
  <div
    className="account__options"
  />
</section>
`;

exports[`AccountInfo component should render the sign out button if it is authenticated 1`] = `
<section
  className="account"
>
  <div
    className="account__name"
  >
    Hi, 
    mysterious user
  </div>
  <div
    className="account__options"
  >
    <button
      className="account__options__signout button"
      onClick={[Function]}
      type="button"
    >
      Sign out
    </button>
  </div>
</section>
`;

exports[`AccountInfo component should show the user name 1`] = `
<section
  className="account"
>
  <div
    className="account__name"
  >
    Hi, 
    Foo
  </div>
  <div
    className="account__options"
  />
</section>
`;
